# CPP-Game-CatchEmAll

./: AppManager.cpp  AppManager.h  CMakeLists.txt  Functions.cpp  Functions.h  README.md  Test.cpp  doctest.h  main.cpp
